# simple_gce

./: .gitignore  README.md  environment.yml  setup.cfg  simple_gce.py
.github/workflows/: main.yml
data/: ia_model_example.csv  lifetimes_portinari.csv  sn_models_example.csv  test_stellar_models.csv
data/grimmett-2020/: README.md  grimmett-2020_hn.csv  grimmett_models.csv  kobayashi-2006_ia.csv
data/kobayashi-2006/: README.md  kobayashi-2006_hn_scaled.csv  kobayashi-2006_ia.csv  kobayashi-2006_ia_scaled.csv  kobayashi-2006_imfweighted.csv  kobayashi-2006_sn.csv  kobayashi-2006_sn_scaled.csv  kobayashi-2006_table1.csv  kobayashi-2006_table2.csv  kobayashi-2006_table3_ia.csv  kobayashi-2006_table3_imfweighted.csv
data/kobayashi-2006/raw/: table1.csv  table2.csv  table3.csv
simple_gce/: __init__.py  __main__.py  config.py
simple_gce/example_configs/: grimmett-2020_config.py  kobayashi-2006_config.py
simple_gce/gce/: approx_agb.py  approx_lifetime.py  approx_winds.py  evolve.py  galaxy.py  generate_imf.py  ia_system.py  ia_utils.py  imf.py
simple_gce/io/: check_stellar_models.py  load_stellar_models.py
simple_gce/utils/: check_config.py  chem_elements.py  error_handling.py
tests/: test_approx_lifetime.py  test_load_stellar_models.py
tests/test_gce/: test_approx_lifetime.py
tests/test_utils/: test_chem_elements.py
