[metadata]
name = simple_gce
version = attr: simple_gce.__version__
author = James Grimmett
author_email = james.grimmett@protonmail.com
license = MIT
url = https://github.com/jamesgrimmett/simple_gce
description = A simple one-zone Galactic Chemical Evolution (GCE) model.
long_description = file: README.md
long_description_content_type = text/markdown
#classifiers =

[options]
package_dir =
    = simple_gce
packages = find:
install_requires =
    numpy
    scipy
    pandas
include_package_data = True

[options.packages.find]
where = simple_gce